# news_aggr

./: .gitignore  abs_module.py  habr_res.json  main.py  pyproject.toml  requirements.txt  t.json  test.py
app/: main.py
app/modules/: basemodule.py  habr.py  rbc.py
app/parsing_modules/: abs_module.py  habr.py
